# tvmdp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt
config/: Config.cmake.in  tvmdp-config.cmake.in  tvmdp.pc.in
config/toolchains/: arm64_cn10k_linux_gcc.cmake  arm64_linux_gcc.cmake
docs/: CMakeLists.txt  Doxyfile.in  MainPage.md
include/: tvmdp.h  tvmdp.hpp
src/: CMakeLists.txt  tvmdp.cpp  tvmdp_c.cpp
tests/: CMakeLists.txt  tvmdp_test.cpp
tests/c_test/: CMakeLists.txt  tvmdp_test.c
tests/cxx_test/: CMakeLists.txt  tvmdp_test.cpp
